--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ header {
 
 .burger__menu {
     display: none;
-    width: 60px;
+    width: 35px;
     height: 45px;
     position: relative;
     -webkit-transform: rotate(0deg);
@@ -136,7 +136,7 @@ header {
     display: block;
     position: absolute;
     height: 3px;
-    width: 35px;
+    width: 100%;
     background: #6197FF;
     border-radius: 9px;
     opacity: 1;
@@ -606,4 +606,20 @@ header {
         margin-bottom: 10px;
     }
 
+    .burger__menu {
+        width: 25px;
+        height: 30px;
+    }
+
+    .burger__menu span:nth-child(2),.burger__menu span:nth-child(3) {
+        top: 12px;
+      }
+      
+      .burger__menu span:nth-child(4) {
+        top: 24px;
+      }
+
+      .nav__link {
+        font-size: 18px;
+      }
 }
